# vector-vortex

./: Cargo.toml  Dockerfile  README.md
fastembed/src/: embedding_generator.rs  fastembed-model.rs  main.rs
src/: api_client.rs  api_client_test.rs  data-loader.rs  hnsw_index.rs  hnsw_wrapper.rs  main.rs  search-engine.rs  utils.rs  vector-store.rs
